Remove checkbox from products table, fix tall images using overflow hidden

--- a/src/containers/Synthesis/Supplier/ProductsTable/index.scss
+++ b/src/containers/Synthesis/Supplier/ProductsTable/index.scss
@@ -70,7 +70,9 @@
     }
 
     tr td .prod_img img {
-      width: 96px;
+      width: 100%;
+      max-height: 100px;
+      overflow: hidden;
       margin-top: 6px;
     }
 
@@ -78,10 +80,8 @@
       padding-left: 5px;
       vertical-align: top;
       width: 125px;
-    }
 
-    tr td:nth-child(1) {
-      padding: 13px 20px 4px 20px;
+      padding: 12px 20px 12px 12px;
       width: 540px;
     }
 
